FROM 0.1 TO 0.11:
===================
- Added a new Deathmatch map, CYDM03: Verticle Datapath, by Revae!
- Trimmed a few unused textures.
- Rephrased some obituaries due to incorrect/lame terminology.
- The Shotgun's tracers now show up in non-Doom games.
- Weapon balance has been completely redone using the power of MATH, rather than "what feels right".
 ^-: Carbine now does 180 damage every 50 tics. 180/50 = 3.6, 3.6*35 = average 126 damage a second. 21 damage buff.
 ^-: Shotgun does 10*4(1d3) and 15*3(1d3), 80+90 = 170, 170/40 = 4.25, 4.25*35 = average 148.75 damage a second. 8.75 damage buff.
 ^-: Vulcan does two projectiles with 8 damage every 3 tics. [(2x8)/2]+(8/2) = 12 damage every 3 tics = 4, 4*35 = average 140 damage a second. 35 damage nerf.
 ^-: Vulcan has had its ammo halved in LMS, with 3 tics at 500 ammo being 1500/35 = 42.85[...] seconds of firing. Its radius and height has also been reduced from 8 to 6.
 ^-: Running people over has had its damage boosted from 400 to 500, to ensure sure-kills.
- Running people over no longer can be reflected back and kill the Runner. That was weird.
- Ammo numbers for the Shotgun, Carbine, Purge Rifle, and Hammer have been centered in the bar HUD.
- The Cyberrunner tutorial, racing maps, and deathmatch maps are now accessible from the main menu.
- There is now a Quake-style when-shot-connects sound indicator, toggled via cyber_cl_hitindicator.
- Various tweaks across both CYRC01 and CYRC02, adjusting textures and tweaking the ACS.
- The race maps now refill health and boosts upon enter.
- cyber_cl_particles has been removed, in an attempt to combat the crashing that some people are having.
- For vanilla jumping maps with combat, ammo drops have been added for the weapons. They replace the big ammo packs and have about a quarter of the weapon's total ammo capacity.
- Nothing has changed in CYRTUT.
- With Zandronum's update to 1.1, the Shotgun now has FBF_NORANDOM for normalized damage.